[package]
name = "proxy"
version = "0.1.0"
edition.workspace = true

[package.metadata.sails]
services = [
    "proxy::this_that::ThisThatCaller<sails_rename::client::Service<demo_client::this_that::ThisThatImpl>>",
]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "proxy-idl-gen"
path = "src/main-idl-gen.rs"
required-features = ["idl-gen"]

[dependencies]
demo-client = { path = "../demo/client" }
sails-idl-gen = { workspace = true, optional = true }
sails-rename = { workspace = true }
anyhow = { workspace = true, optional = true }
sails-build = { workspace = true, optional = true }

[dev-dependencies]
demo-client = { path = "../demo/client", features = ["with_mocks"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
demo-client = { path = "../demo/client" }
sails-rename = { workspace = true, features = ["build"] }
sails-build.workspace = true

[features]
default = ["sails-canonical", "wasm-builder"]
sails-canonical = []
wasm-builder = []
sails-meta-dump = ["sails-canonical", "dep:anyhow", "dep:sails-build"]
idl-gen = ["dep:sails-idl-gen"]

[[bin]]
name = "sails_meta_dump"
path = "src/bin/sails_meta_dump.rs"
required-features = ["sails-meta-dump"]
