[package]
name = "proxy"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "proxy-idl-gen"
path = "src/main-idl-gen.rs"
required-features = ["idl-gen"]

[dependencies]
demo-client = { path = "../demo/client" }
# TODO: Switch to new IDL generator crate
# sails-idl-gen = { workspace = true, optional = true }
sails-rename.workspace = true

[dev-dependencies]
demo-client = { path = "../demo/client", features = ["with_mocks"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[build-dependencies]
sails-rename = { workspace = true, features = ["build"] }

[features]
# TODO: Switch to new IDL generator crate
# idl-gen = ["dep:sails-idl-gen"]
idl-gen = []
