[package]
name = "sails-macros-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-case.workspace = true
proc-macro-error.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
