[workspace.package]
version = "0.0.1"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/sails"

[workspace]
resolver = "3"
members = ["client-gen"]

[workspace.dependencies]
# sails
sails-idl-parser = "=0.10.2"
# others
anyhow = "1"
convert_case = "0.10"
genco = "0.19"
insta = "1.46"
itertools = "0.14"
parity-scale-codec = "=3.7.5"
serde = { version = "1.0", features = ["derive"] }
serde-json = { package = "serde_json", version = "1.0" }
