[workspace.package]
version = "0.0.1"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/sails"

[workspace]
resolver = "3"
members = ["client-gen"]

[workspace.dependencies]
# sails
sails-idl-parser = "=1.0.1"
# others
anyhow = "1"
convert_case = "0.11"
genco = "0.19"
insta = "1.43"
itertools = "0.15"
parity-scale-codec = "=3.7.5"
serde = { version = "1.0", features = ["derive"] }
serde-json = { package = "serde_json", version = "1.0" }
